solucionado el error