@@ -39,7 +39,7 @@ import java.util.concurrent.atomic.AtomicInteger;
  */
 public class Server {
 
-   private GestorSalas gestorSalas;
+    private GestorSalas gestorSalas;
     private ServerSocket servidor;
     private List<Socket> clientes;
     private Map<Socket, ObjectOutputStream> outputStreams;
@@ -57,12 +57,11 @@ public class Server {
 
     public Server() {
         this.gestorSalas = GestorSalas.getInstance();
-        
 
         this.clientes = new CopyOnWriteArrayList<>();
         this.outputStreams = new ConcurrentHashMap<>();
         this.jugadoresPorSocket = new ConcurrentHashMap<>();
-         
+
         this.blackBoard = new BlackBoard(this);
         this.serverComunicacion = new ServerComunicacion(this);
         this.running = false;
@@ -71,50 +70,52 @@ public class Server {
         this.jugadoresRegistrados = new CopyOnWriteArrayList<>();
         // Initialize thread pool with core and max thread counts
         this.executorService = Executors.newCachedThreadPool(new ThreadFactory() {
-        private final AtomicInteger threadCounter = new AtomicInteger(1);
-        @Override
-        public Thread newThread(Runnable r) {
-            Thread thread = new Thread(r, "ServerThread-" + threadCounter.getAndIncrement());
-            thread.setDaemon(true);
-            return thread;
-        }
-    });
+            private final AtomicInteger threadCounter = new AtomicInteger(1);
+
+            @Override
+            public Thread newThread(Runnable r) {
+                Thread thread = new Thread(r, "ServerThread-" + threadCounter.getAndIncrement());
+                thread.setDaemon(true);
+                return thread;
+            }
+        });
     }
-    
+
     // Método para registrar jugadores en el servidor desde BlackBoard
     public void registrarJugadores(Map<String, Jugador> jugadoresBlackBoard) {
- System.out.println("SERBER  : Socket del jugador actual"+jugadoresBlackBoard);
+        System.out.println("SERBER  : Socket del jugador actual" + jugadoresBlackBoard);
         // Agregar los jugadores de BlackBoard a la lista de jugadores del servidor
         jugadoresRegistrados.addAll(jugadoresBlackBoard.values());
 
         // Imprimir el número de jugadores registrados
         System.out.println("Jugadores registrados en el servidor: " + jugadoresRegistrados.size());
     }
-    
-public static List<Sala> cargarSalas() {
-  try {
-        Path path = Paths.get("salas.json");
-        if (Files.exists(path)) {
-            String json = new String(Files.readAllBytes(path));
-            List<Sala> salas = ConversorJSON.convertirJsonASalas(json);
-            System.out.println("Salas cargadas correctamente desde salas.json: " + salas.size());
-            return salas;
-        }
-    } catch (IOException e) {
-        System.err.println("Error al cargar las salas: " + e.getMessage());
-    }
-    return new CopyOnWriteArrayList<>(); // Devuelve una lista vacía si no hay archivo o si ocurre un error
-}
 
-public void guardarSalas() {
-    try {
-        String json = ConversorJSON.convertirSalasAJson(salasActivas);
-        Files.write(Paths.get("salas.json"), json.getBytes());
-        System.out.println("Salas guardadas exitosamente: " + salasActivas.size());
-    } catch (IOException e) {
-        System.err.println("Error al guardar las salas: " + e.getMessage());
+    public static List<Sala> cargarSalas() {
+        try {
+            Path path = Paths.get("salas.json");
+            if (Files.exists(path)) {
+                String json = new String(Files.readAllBytes(path));
+                List<Sala> salas = ConversorJSON.convertirJsonASalas(json);
+                System.out.println("Salas cargadas correctamente desde salas.json: " + salas.size());
+                return salas;
+            }
+        } catch (IOException e) {
+            System.err.println("Error al cargar las salas: " + e.getMessage());
+        }
+        return new CopyOnWriteArrayList<>(); // Devuelve una lista vacía si no hay archivo o si ocurre un error
     }
-}
+
+    public void guardarSalas() {
+        try {
+            String json = ConversorJSON.convertirSalasAJson(salasActivas);
+            Files.write(Paths.get("salas.json"), json.getBytes());
+            System.out.println("Salas guardadas exitosamente: " + salasActivas.size());
+        } catch (IOException e) {
+            System.err.println("Error al guardar las salas: " + e.getMessage());
+        }
+    }
+
     public void cerrarServidor() {
         try {
             // Detener el servidor
@@ -144,7 +145,6 @@ public void guardarSalas() {
             System.err.println("Error cerrando el servidor: " + e.getMessage());
         }
     }
-
 
     public static synchronized List<Sala> getSalas() {
         return new ArrayList<>(salasActivas); // Devuelve una copia para evitar modificaciones externas
@@ -188,10 +188,10 @@ public void guardarSalas() {
             throw e;
         }
     }
-    public Map<Socket, Jugador> getJugadoresPorSocket() {
-    return jugadoresPorSocket;
-}
 
+    public Map<Socket, Jugador> getJugadoresPorSocket() {
+        return jugadoresPorSocket;
+    }
 
     private void aceptarConexiones() {
         while (running) {
@@ -223,14 +223,14 @@ public void guardarSalas() {
         }
     }
 
-    public void agregarSala(Sala sala,Socket socket) {
-      gestorSalas.agregarSala(sala);
-    Evento evento = new Evento("NUEVA_SALA");
-    evento.agregarDato("sala", sala);
-    enviarEvento(evento,socket);
-    
-    // Guardar salas después de agregar
-    guardarSalas();
+    public void agregarSala(Sala sala, Socket socket) {
+        gestorSalas.agregarSala(sala);
+        Evento evento = new Evento("NUEVA_SALA");
+        evento.agregarDato("sala", sala);
+        enviarEvento(evento, socket);
+
+        // Guardar salas después de agregar
+        guardarSalas();
     }
 
     public List<Sala> obtenerSalasActivas() {
@@ -277,135 +277,131 @@ public void guardarSalas() {
             isConnected = false;
         }
     }
-    
- public void persistirClientes() {
-    // Cargar clientes existentes desde el archivo
-    List<Jugador> clientesExistentes = cargarClientesExistentes();
 
-    // Agregar nuevos clientes a la lista si no están ya presentes
-    for (Jugador jugador : jugadoresRegistrados) {
-        if (!clientesExistentes.contains(jugador)) {
-            clientesExistentes.add(jugador);
+    public void persistirClientes() {
+        // Cargar clientes existentes desde el archivo
+        List<Jugador> clientesExistentes = cargarClientesExistentes();
+
+        // Agregar nuevos clientes a la lista si no están ya presentes
+        for (Jugador jugador : jugadoresRegistrados) {
+            if (!clientesExistentes.contains(jugador)) {
+                clientesExistentes.add(jugador);
+            }
+        }
+
+        // Imprimir la lista de clientes antes de guardar
+        System.out.println("[PERSISTENCIA] Lista de clientes a guardar: " + clientesExistentes);
+
+        // Convertir la lista a JSON y guardarla en el archivo
+        String json = ConversorJSON.convertirJugadoresAJson(clientesExistentes);
+        try {
+            Files.write(Path.of("clientes.json"), json.getBytes(StandardCharsets.UTF_8));
+            System.out.println("[PERSISTENCIA] Clientes guardados correctamente.");
+        } catch (IOException e) {
+            System.err.println("[ERROR] No se pudo guardar el archivo de clientes: " + e.getMessage());
         }
     }
 
-    // Imprimir la lista de clientes antes de guardar
-    System.out.println("[PERSISTENCIA] Lista de clientes a guardar: " + clientesExistentes);
+    public List<Jugador> cargarClientesExistentes() {
+        List<Jugador> clientes = new ArrayList<>();
 
-    // Convertir la lista a JSON y guardarla en el archivo
-    String json = ConversorJSON.convertirJugadoresAJson(clientesExistentes);
-    try {
-        Files.write(Path.of("clientes.json"), json.getBytes(StandardCharsets.UTF_8));
-        System.out.println("[PERSISTENCIA] Clientes guardados correctamente.");
-    } catch (IOException e) {
-        System.err.println("[ERROR] No se pudo guardar el archivo de clientes: " + e.getMessage());
-    }
-}
+        try {
+            Path filePath = Path.of("clientes.json");
+            if (Files.exists(filePath)) {
+                // Lee el contenido del archivo JSON
+                String json = Files.readString(filePath, StandardCharsets.UTF_8);
 
+                // Convierte el JSON en una lista de jugadores
+                clientes = ConversorJSON.convertirJsonAJugadores(json);
 
-
-public List<Jugador> cargarClientesExistentes() {
-    List<Jugador> clientes = new ArrayList<>();
-    
-    try {
-        // Verifica si el archivo ya existe
-        Path filePath = Path.of("clientes.json");
-        if (Files.exists(filePath)) {
-            // Lee el contenido del archivo JSON
-            String json = Files.readString(filePath, StandardCharsets.UTF_8);
-
-            // Convierte el JSON en una lista de jugadores
-            clientes =  ConversorJSON.convertirJsonAJugadores(json);
-            System.out.println("[CARGA] Clientes cargados correctamente: " + clientes.size());
-        } else {
-            System.out.println("[CARGA] No se encontró el archivo de clientes. Se creará uno nuevo.");
+                // Add null check
+                if (clientes == null) {
+                    clientes = new ArrayList<>();
+                    System.out.println("[CARGA] No se pudieron cargar los clientes. Inicializando lista vacía.");
+                } else {
+                    System.out.println("[CARGA] Clientes cargados correctamente: " + clientes.size());
+                }
+            } else {
+                System.out.println("[CARGA] No se encontró el archivo de clientes. Se creará uno nuevo.");
+            }
+        } catch (IOException e) {
+            System.err.println("[ERROR] No se pudo cargar el archivo de clientes: " + e.getMessage());
+            clientes = new ArrayList<>();
         }
-    } catch (IOException e) {
-        System.err.println("[ERROR] No se pudo cargar el archivo de clientes: " + e.getMessage());
+
+        return clientes;
     }
 
-    return clientes;
-}
+    public void registrarJugador(Socket socket, Jugador jugador) {
+        synchronized (jugadoresPorSocket) {
+            // Verifica si el cliente ya está registrado
 
-
-   
-   public void registrarJugador(Socket socket, Jugador jugador) {
-    synchronized (jugadoresPorSocket) {
-        // Verifica si el cliente ya está registrado
-       
             clientes.add(socket);
             jugadoresPorSocket.put(socket, jugador);
 
             System.out.println("[REGISTRO] Nuevo cliente registrado: " + socket);
 
-        // Si no existe, registra el jugador con su socket
-        jugadoresPorSocket.put(socket, jugador);
-        System.out.println("[REGISTRO] Jugador registrado en el servidor: " + jugador.getNombre());
+            // Si no existe, registra el jugador con su socket
+            jugadoresPorSocket.put(socket, jugador);
+            System.out.println("[REGISTRO] Jugador registrado en el servidor: " + jugador.getNombre());
 
+            try {
+                // Crear y registrar el ObjectOutputStream para este socket
+                ObjectOutputStream out = new ObjectOutputStream(socket.getOutputStream());
+                synchronized (outputStreams) {
+                    outputStreams.put(socket, out);
+                    jugadoresRegistrados.add(jugador);
+
+                    System.out.println("[REGISTRO] Stream de salida registrado para: " + jugador.getNombre());
+                }
+            } catch (IOException e) {
+                System.err.println("[REGISTRO] Error al crear el stream de salida para: " + jugador.getNombre());
+                e.printStackTrace();
+                return; // Si falla aquí, no intentamos persistir
+            }
+
+            // Persistir la lista de clientes después de un registro exitoso
+            persistirClientes();
+
+            // Enviar evento al BlackBoard
+            System.out.println("[BLACKBOARD] Enviando evento de registro.");
+            Evento nuevoJugadorEvento = new Evento("REGISTRO_USUARIO");
+            nuevoJugadorEvento.agregarDato("jugador", jugador);
+
+            Controller controller = new Controller(this);
+            blackBoard.setController(controller);
+
+            blackBoard.enviarEventoBlackBoard(socket, nuevoJugadorEvento);
+        }
+    }
+
+    public void debugJugadoresCargados() {
+        System.out.println("=== Jugadores Recuperados ===");
+        for (Map.Entry<Socket, Jugador> entry : jugadoresPorSocket.entrySet()) {
+            System.out.println("Socket: " + entry.getKey() + " -> Jugador: " + entry.getValue().getNombre());
+        }
+        System.out.println("=============================");
+    }
+
+    public void cargarClientesPersistidos() {
         try {
-            // Crear y registrar el ObjectOutputStream para este socket
-            ObjectOutputStream out = new ObjectOutputStream(socket.getOutputStream());
-            synchronized (outputStreams) {
-                outputStreams.put(socket, out);
-                jugadoresRegistrados.add(jugador);
+            Path filePath = Path.of("clientes.json");
 
-                System.out.println("[REGISTRO] Stream de salida registrado para: " + jugador.getNombre());
+            // Log para verificar la ubicación de lectura
+            System.out.println("[CARGA] Intentando cargar clientes desde: " + filePath.toAbsolutePath());
+
+            if (Files.exists(filePath)) {
+                String json = Files.readString(filePath);
+                List<Socket> clientesCargados = ConversorJSON.convertirJsonASockets(json);
+                clientes.addAll(clientesCargados);
+                System.out.println("[CARGA] Clientes cargados correctamente.");
+            } else {
+                System.out.println("[CARGA] No se encontró el archivo de clientes persistidos.");
             }
         } catch (IOException e) {
-            System.err.println("[REGISTRO] Error al crear el stream de salida para: " + jugador.getNombre());
-            e.printStackTrace();
-            return; // Si falla aquí, no intentamos persistir
+            System.err.println("[ERROR] Error al cargar los clientes persistidos: " + e.getMessage());
         }
-
-        // Persistir la lista de clientes después de un registro exitoso
-        persistirClientes();
-
-        // Enviar evento al BlackBoard
-        System.out.println("[BLACKBOARD] Enviando evento de registro.");
-        Evento nuevoJugadorEvento = new Evento("REGISTRO_USUARIO");
-        nuevoJugadorEvento.agregarDato("jugador", jugador);
-
-        Controller controller = new Controller(this);
-        blackBoard.setController(controller);
-
-        blackBoard.enviarEventoBlackBoard(socket, nuevoJugadorEvento);
     }
-}
-
-    
-    public void debugJugadoresCargados() {
-    System.out.println("=== Jugadores Recuperados ===");
-    for (Map.Entry<Socket, Jugador> entry : jugadoresPorSocket.entrySet()) {
-        System.out.println("Socket: " + entry.getKey() + " -> Jugador: " + entry.getValue().getNombre());
-    }
-    System.out.println("=============================");
-}
-    
-    
-
-
-public void cargarClientesPersistidos() {
-    try {
-        Path filePath = Path.of("clientes.json");
-
-        // Log para verificar la ubicación de lectura
-        System.out.println("[CARGA] Intentando cargar clientes desde: " + filePath.toAbsolutePath());
-
-        if (Files.exists(filePath)) {
-            String json = Files.readString(filePath);
-            List<Socket> clientesCargados = ConversorJSON.convertirJsonASockets(json);
-            clientes.addAll(clientesCargados);
-            System.out.println("[CARGA] Clientes cargados correctamente.");
-        } else {
-            System.out.println("[CARGA] No se encontró el archivo de clientes persistidos.");
-        }
-    } catch (IOException e) {
-        System.err.println("[ERROR] Error al cargar los clientes persistidos: " + e.getMessage());
-    }
-}
-
-
-
 
     /**
      * Verifica si el servidor está conectado y operativo.
@@ -499,7 +495,6 @@ public void cargarClientesPersistidos() {
 //    public Controller getController() {
 //        return this.blackboardController;
 //    }
-
     /**
      * Obtiene el socket asociado a un jugador dado.
      *
@@ -529,25 +524,24 @@ public void cargarClientesPersistidos() {
                     .anyMatch(jugador -> jugador.getNombre().equalsIgnoreCase(nombre)); // Comparar solo por nombre
         }
     }
-    
+
     public void enviarMensajeATodosLosClientes(String mensaje) {
         System.out.println("Se envio el mensaje a todos los clientes");
-    // Iterar sobre todos los clientes conectados (suponiendo que 'clientes' es una lista de sockets)
-        System.out.println("cliente socket:"+clientes);
-    for (Socket clienteSocket : clientes) {
-        try {
-            // Obtener el OutputStream del socket del cliente
-            PrintWriter out = new PrintWriter(clienteSocket.getOutputStream(), true);
-            // Enviar el mensaje como texto
-            out.println(mensaje);
-            
-             System.out.println("Clientes conectados"+clientes.size());
-        } catch (IOException e) {
-            System.err.println("Error al enviar mensaje al cliente: " + e.getMessage());
+        // Iterar sobre todos los clientes conectados (suponiendo que 'clientes' es una lista de sockets)
+        System.out.println("cliente socket:" + clientes);
+        for (Socket clienteSocket : clientes) {
+            try {
+                // Obtener el OutputStream del socket del cliente
+                PrintWriter out = new PrintWriter(clienteSocket.getOutputStream(), true);
+                // Enviar el mensaje como texto
+                out.println(mensaje);
+
+                System.out.println("Clientes conectados" + clientes.size());
+            } catch (IOException e) {
+                System.err.println("Error al enviar mensaje al cliente: " + e.getMessage());
+            }
         }
     }
-}
-
 
     /**
      * Envía un evento a todos los clientes conectados.
@@ -555,41 +549,40 @@ public void cargarClientesPersistidos() {
      * @param evento El evento a enviar.
      * @param socketCliente
      */
-public void enviarEvento(Evento evento, Socket socketCliente) {
-    System.out.println("Iniciando envío de evento: " + evento.getTipo());
+    public void enviarEvento(Evento evento, Socket socketCliente) {
+        System.out.println("Iniciando envío de evento: " + evento.getTipo());
 
-    List<Socket> clientesDesconectados = new ArrayList<>();
+        List<Socket> clientesDesconectados = new ArrayList<>();
 
-    synchronized (outputStreams) {
-        System.out.println("synchronized (outputStreams)" + outputStreams);
+        synchronized (outputStreams) {
+            System.out.println("synchronized (outputStreams)" + outputStreams);
 
-        // Si el socket proporcionado está en el mapa de outputStreams, solo enviamos el evento a ese cliente
-        if (outputStreams.containsKey(socketCliente)) {
-            System.out.println("Enviando evento al cliente: " + socketCliente.getInetAddress());
-            ObjectOutputStream out = outputStreams.get(socketCliente);
+            // Si el socket proporcionado está en el mapa de outputStreams, solo enviamos el evento a ese cliente
+            if (outputStreams.containsKey(socketCliente)) {
+                System.out.println("Enviando evento al cliente: " + socketCliente.getInetAddress());
+                ObjectOutputStream out = outputStreams.get(socketCliente);
 
-            try {
-                synchronized (out) {
-                    System.out.println("Preparando para escribir en el cliente: " + socketCliente.getInetAddress());
+                try {
+                    synchronized (out) {
+                        System.out.println("Preparando para escribir en el cliente: " + socketCliente.getInetAddress());
 
-                    // Enviamos el evento al cliente específico
-                    out.writeObject(evento);
+                        // Enviamos el evento al cliente específico
+                        out.writeObject(evento);
 
-                    System.out.println("out.flush();");
-                    out.flush();
+                        System.out.println("out.flush();");
+                        out.flush();
+                    }
+
+                    System.out.println("Evento enviado exitosamente a: " + socketCliente.getInetAddress());
+                } catch (IOException e) {
+                    System.err.println("Error enviando evento a " + socketCliente.getInetAddress() + ": " + e.getMessage());
+                    clientesDesconectados.add(socketCliente);
                 }
-
-                System.out.println("Evento enviado exitosamente a: " + socketCliente.getInetAddress());
-            } catch (IOException e) {
-                System.err.println("Error enviando evento a " + socketCliente.getInetAddress() + ": " + e.getMessage());
-                clientesDesconectados.add(socketCliente);
+            } else {
+                System.err.println("El cliente no está conectado: " + socketCliente.getInetAddress());
             }
-        } else {
-            System.err.println("El cliente no está conectado: " + socketCliente.getInetAddress());
         }
     }
-}
-
 
     /**
      * Envía un evento a un jugador específico.
@@ -692,7 +685,6 @@ public void enviarEvento(Evento evento, Socket socketCliente) {
 //            System.err.println("Error al cerrar la conexión: " + e.getMessage());
 //        }
 //    }
-
     /**
      * Procesa un evento recibido desde un cliente y lo delega al componente
      * correspondiente según el tipo de evento. Este método actúa como un
@@ -736,12 +728,13 @@ public void enviarEvento(Evento evento, Socket socketCliente) {
             e.printStackTrace();
         }
     }
+
     public List<Jugador> getUsuariosConectados() {
-    // Devolver una lista con los jugadores actualmente conectados
-    synchronized (jugadoresPorSocket) {
-        return new ArrayList<>(jugadoresPorSocket.values());
+        // Devolver una lista con los jugadores actualmente conectados
+        synchronized (jugadoresPorSocket) {
+            return new ArrayList<>(jugadoresPorSocket.values());
+        }
     }
-}
 
     public List<Socket> getClientes() {
         return clientes;
@@ -750,12 +743,9 @@ public void enviarEvento(Evento evento, Socket socketCliente) {
     public void setClientes(List<Socket> clientes) {
         this.clientes = clientes;
     }
-    
-    
-
 
     public void solicitarSalas(Socket socket) {
         Evento solicitud = new Evento("RESPUESTA_SALAS");
-        enviarEvento(solicitud,socket);
+        enviarEvento(solicitud, socket);
     }
 }
